added contract representation sBERT experiment

--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -22,23 +22,15 @@
     "!pip install torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
     "!pip install torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
     "!pip install pyg-lib -f https://data.pyg.org/whl/nightly/torch-${TORCH}.html\n",
-    "!pip install git+https://github.com/pyg-team/pytorch_geometric.git"
+    "!pip install git+https://github.com/pyg-team/pytorch_geometric.git\n",
+    "!pip install sentence_transformers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/seankhatiri/sean2/venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###### IMPORT #######\n",
     "import numpy as np\n",
@@ -63,38 +55,39 @@
     "from torch_geometric.nn import SAGEConv, to_hetero\n",
     "import torch.nn.functional as F\n",
     "from sklearn.metrics import roc_auc_score\n",
-    "import copy"
+    "import copy\n",
+    "import re\n",
+    "from sentence_transformers import SentenceTransformer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "possible_experiments = ['none', 'diversity', 'ucsp', 'icsp', 'usparcity', 'isparcity', 'sBERT']\n",
+    "possible_experiments = ['none', 'diversity', 'ucsp', 'icsp', 'usparcity', 'isparcity', 'sBERT', 'TFIDF']\n",
     "possible_modes = ['debug', 'experiment']\n",
     "model_variants = ['gnn', 'nmf', 'cmf']\n",
     "\n",
-    "experiment = possible_experiments[4]\n",
+    "experiment = possible_experiments[6]\n",
     "mode = possible_modes[0]\n",
-    "model_modes_eval = model_variants[0]\n",
+    "model_variant_eval = model_variants[0]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "user sparcity value is: 0.950423943918249\n",
-      "item feature tensor shape torch.Size([698, 1489])\n",
-      "number of unique users 68\n",
-      "number of unique items 698\n"
+      "item feature tensor shape torch.Size([1214, 768])\n",
+      "number of unique users 237\n",
+      "number of unique items 1214\n"
      ]
     }
    ],
@@ -178,17 +171,50 @@
     "        k = 5\n",
     "        items_ratings_df = filter_interactions(items_ratings_df, 'item', k)\n",
     "\n",
-    "    items_ratings_df = items_ratings_df[:1000] if mode == 'debug' else items_ratings_df\n",
+    "    items_ratings_df = items_ratings_df[:2000] if mode == 'debug' else items_ratings_df\n",
     "    items_df = {}\n",
     "    items_df['name'] = items_ratings_df['item'].unique()\n",
     "    items_df['itemId'], unique_names = pd.factorize(items_df['name'])\n",
-    "    items_df['itemId'] = items_df['itemId'] + 1\n",
+    "    # items_df['itemId'] = items_df['itemId'] + 1 #TODO test commenting this line didn't breal anything\n",
     "    items_df = pd.DataFrame(items_df, columns=['itemId', 'name'])\n",
     "\n",
-    "    # TODO: add sBERT instead of this\n",
-    "    if experiment == 'sBERT':\n",
-    "        \n",
-    "    else:\n",
+    "    def get_item_feat_sbert(items_df):\n",
+    "        contract2comments = pd.read_parquet('dataset/contracts2comment.parquet')\n",
+    "        c2c_main_class = contract2comments[contract2comments['contract_name'] == contract2comments['class_name']]\n",
+    "\n",
+    "        def reorder_text(text):\n",
+    "            lines = text.split(\"\\n\")\n",
+    "            notice_lines = [line for line in lines if \"@notice\" in line]\n",
+    "            other_lines = [line for line in lines if \"@notice\" not in line]\n",
+    "            reorderd_text = \"\\n\".join(notice_lines + other_lines)\n",
+    "            return reorderd_text\n",
+    "\n",
+    "        def preprocess_text(text):\n",
+    "            text = reorder_text(text)\n",
+    "            text = re.sub(r'http\\S+|www\\S+|https\\S+', '', text, flags=re.MULTILINE)\n",
+    "            # Remove special characters, numbers, etc.\n",
+    "            text = re.sub(r'\\W', ' ', text)\n",
+    "            # Remove extra spaces\n",
+    "            text = re.sub(r'\\s+', ' ', text).strip()\n",
+    "            text = text[:512] if len(text) > 512 else text\n",
+    "            return text\n",
+    "\n",
+    "        sentences = []\n",
+    "        for i, item in items_df.iterrows():\n",
+    "            comment_class = c2c_main_class[c2c_main_class['contract_name'] == item['name']]\n",
+    "            if not comment_class.empty and comment_class['class_documentation'].iloc[0] != '':\n",
+    "                sentences.append(comment_class['class_documentation'].iloc[0])\n",
+    "            else:\n",
+    "                class_names = contract2comments[contract2comments['contract_name'] == item['name']]['class_name']\n",
+    "                sentences.append(' '.join(class_names))\n",
+    "\n",
+    "        preprocessed_sentences = [preprocess_text(sentence) for sentence in sentences]\n",
+    "        model = SentenceTransformer('sentence-transformers/distilbert-base-nli-mean-tokens')\n",
+    "        embeddings = model.encode(preprocessed_sentences)\n",
+    "        item_feat = torch.from_numpy(embeddings).to(torch.float)\n",
+    "        return item_feat\n",
+    "    \n",
+    "    def get_item_feat_tfidf(items_df):\n",
     "        contract_top_words_df = pd.read_parquet('dataset/contract_top_words.parquet')\n",
     "        contract_top_words_df = contract_top_words_df.rename(columns={'contract_name': 'name'})\n",
     "        contracts_df_top_words = items_df.merge(contract_top_words_df, on='name', how='left')\n",
@@ -199,6 +225,13 @@
     "        items_df['truncated_keywords'] = items_df['keywords'].apply(lambda x: ','.join(x.split(',')))\n",
     "        X_df = items_df['truncated_keywords'].str.get_dummies(',')\n",
     "        item_feat = torch.from_numpy(X_df.values).to(torch.float)\n",
+    "        return item_feat\n",
+    "    \n",
+    "    ########### SBERT EXPERIMENT ###########\n",
+    "    if experiment == 'sBERT':\n",
+    "        item_feat = get_item_feat_sbert(items_df)\n",
+    "    else:\n",
+    "        item_feat = get_item_feat_tfidf(items_df)\n",
     "\n",
     "    print('item feature tensor shape', item_feat.shape)\n",
     "    items_ratings_df = items_ratings_df.rename(columns={'user': 'userId', 'item': 'itemId'})\n",
@@ -217,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,27 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sparcity experiment TODO\n",
-    "# if we just keep users that had more than x interactions, or items with than y interactions -> how the matrix sparcity will change? what can be a good plot to demonstrate it?\n",
-    "# create a tabel with two main sections: user sparcity, and item sparcity, we will see if the sparcity value decrease how the Hit@k and NDCG@k will improve\n",
-    "num_users = data['user'].nunique()\n",
-    "num_items = data['item'].nunique()\n",
-    "num_interactions = len(data)\n",
-    "\n",
-    "# Total possible interactions is num_users * num_items\n",
-    "total_possible_interactions = num_users * num_items\n",
-    "\n",
-    "# Sparsity is 1 minus (observed interactions / possible interactions)\n",
-    "sparsity = 1 - (num_interactions / total_possible_interactions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,17 +434,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test edges shape BEFORE adding all possible user item pairs torch.Size([2, 1000])\n",
-      "test edges shape AFTER adding all possible user item pairs torch.Size([2, 372335])\n",
-      "unique test users 565\n",
-      "unique test items 659\n"
+      "test edges shape BEFORE adding all possible user item pairs torch.Size([2, 400])\n",
+      "test edges shape AFTER adding all possible user item pairs torch.Size([2, 45000])\n",
+      "unique test users 150\n",
+      "unique test items 300\n"
      ]
     }
    ],
@@ -440,7 +453,7 @@
     "\n",
     "# If mode GNN run below\n",
     "### SLICING TEST_DATA FOR ALL_TO_ALL EVAL ###\n",
-    "slice_rate = 0.5\n",
+    "slice_rate = 1\n",
     "if experiment == 'ucsp' or experiment == 'icsp': \n",
     "    slice_rate = 1\n",
     "    test_data = test_data_csp\n",
@@ -483,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -497,126 +510,133 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:01<00:00, 18.23it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 47.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 001, Loss: 0.6366\n"
+      "Epoch: 001, Loss: 0.6819\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:00<00:00, 19.56it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 47.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 002, Loss: 0.5123\n"
+      "Epoch: 002, Loss: 0.5703\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:00<00:00, 20.26it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 45.04it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 003, Loss: 0.4308\n"
+      "Epoch: 003, Loss: 0.5173\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:00<00:00, 20.77it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 45.08it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 004, Loss: 0.3736\n"
+      "Epoch: 004, Loss: 0.4817\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:00<00:00, 19.64it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 38.43it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 005, Loss: 0.3342\n"
+      "Epoch: 005, Loss: 0.4149\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:00<00:00, 19.50it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 45.64it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 006, Loss: 0.3002\n"
+      "Epoch: 006, Loss: 0.4124\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:00<00:00, 19.52it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 46.52it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 007, Loss: 0.2720\n"
+      "Epoch: 007, Loss: 0.3695\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:00<00:00, 20.09it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 45.48it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 008, Loss: 0.2576\n"
+      "Epoch: 008, Loss: 0.3598\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:00<00:00, 19.37it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 43.40it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 009, Loss: 0.2307\n"
+      "Epoch: 009, Loss: 0.3202\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -628,21 +648,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 970/970 [00:30<00:00, 31.73it/s]"
+      "  0%|          | 0/118 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 118/118 [00:00<00:00, 139.53it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all ground truth len 372335\n"
+      "all ground truth len 45000\n"
      ]
     },
     {
@@ -788,9 +815,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 150/150 [00:00<00:00, 2262.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HIT@1: 0.04\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 150/150 [00:00<00:00, 3013.52it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HIT@5: 0.15033333333333335\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 150/150 [00:00<00:00, 2365.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NDCG@1: 0.04\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 150/150 [00:00<00:00, 2357.42it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NDCG@5: 0.09938733033336235\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 150/150 [00:00<00:00, 3945.23it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAP@1: 0.04\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 150/150 [00:00<00:00, 3833.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAP@5: 0.10577777777777778\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' TFIDF\\nHIT@1: 0.05625\\nHIT@5: 0.07854166666666666\\nNDCG@1: 0.05625\\nNDCG@5: 0.06638135940822126\\nMAP@1: 0.05625\\nMAP@5: 0.07510416666666667\\n'"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "####### METRIC EVAL #######\n",
     "\n",
@@ -960,8 +1089,8 @@
     "    # },\n",
     "\n",
     "}\n",
-    "k_values = [1, 5, 10]\n",
-    "evaluate(k_values, test_data_all2all, ground_truth=eval_loader[model_mode_eval]['ground_truth'], pred=eval_loader[model_mode_eval]['pred'])"
+    "k_values = [1, 5]\n",
+    "evaluate(k_values, test_data_all2all, ground_truth=eval_loader[model_variant_eval]['ground_truth'], pred=eval_loader[model_variant_eval]['pred'])"
    ]
   },
   {
