--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -30,6 +30,7 @@
     "!pip install pyarrow fastparquet\n",
     "!pip install transformers\n",
     "!pip install lightfm\n",
+    "!pip install memory-profiler\n",
     "# !pip install torch-sparse -f https://data.pyg.org/whl/torch-{torch.__version__}.html\n",
     "# !pip install torch-cluster -f https://data.pyg.org/whl/torch-{torch.__version__}.html\n",
     "# !pip install sentence_transformers==0.1.0"
@@ -80,6 +81,7 @@
     "from transformers import AutoTokenizer, AutoModel\n",
     "import os\n",
     "import pickle\n",
+    "from memory_profiler import profile\n",
     "# from sentence_transformers import SentenceTransformer"
    ]
   },
@@ -102,7 +104,7 @@
     "    8: 'remove_item_feat', \n",
     "    9: 'add_social_edges',\n",
     "}\n",
-    "experiment = possible_experiments[3]\n",
+    "experiment = possible_experiments[0]\n",
     "\n",
     "possible_modes = ['debug', 'experiment']\n",
     "mode = possible_modes[0]\n",
@@ -528,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -545,126 +547,126 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:06<00:00, 29.58it/s]\n"
+      "100%|██████████| 188/188 [00:06<00:00, 28.69it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 001, Loss: 0.4342\n"
+      "Epoch: 001, Loss: 0.4314\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.68it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 35.83it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 002, Loss: 0.3319\n"
+      "Epoch: 002, Loss: 0.3281\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 34.72it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 36.01it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 003, Loss: 0.2983\n"
+      "Epoch: 003, Loss: 0.2965\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.23it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 36.00it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 004, Loss: 0.2762\n"
+      "Epoch: 004, Loss: 0.2715\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.55it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 35.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 005, Loss: 0.2594\n"
+      "Epoch: 005, Loss: 0.2597\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.72it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 35.74it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 006, Loss: 0.2408\n"
+      "Epoch: 006, Loss: 0.2404\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.82it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 36.00it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 007, Loss: 0.2329\n"
+      "Epoch: 007, Loss: 0.2294\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.62it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 35.93it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 008, Loss: 0.2190\n"
+      "Epoch: 008, Loss: 0.2182\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 36.04it/s]"
+      "100%|██████████| 188/188 [00:05<00:00, 35.96it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 009, Loss: 0.2100\n"
+      "Epoch: 009, Loss: 0.2075\n"
      ]
     },
     {
@@ -683,19 +685,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test to train ratio CSP-item 0.22478333333333333\n",
-      "test data len BEFOR CSP test gen: 60000\n",
-      "test data len AFTER CSP test gen: 13487\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "####### CSP EXPRIMENTS #######\n",
     "### CSP #### note: if the ratio==1, rerun from the first step\n",
@@ -724,24 +716,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7542/7542 [00:40<00:00, 188.43it/s]\n"
+      "  0%|          | 6/10672 [00:00<03:31, 50.46it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10672/10672 [03:25<00:00, 52.06it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test edges shape BEFORE adding all possible user item pairs torch.Size([2, 13487])\n",
-      "test edges shape AFTER adding all possible user item pairs torch.Size([2, 96449])\n",
-      "unique test users 7542\n",
-      "unique test items 4433\n"
+      "test edges shape BEFORE adding all possible user item pairs torch.Size([2, 60000])\n",
+      "test edges shape AFTER adding all possible user item pairs torch.Size([2, 177392])\n",
+      "unique test users 10672\n",
+      "unique test items 16325\n"
      ]
     }
    ],
@@ -801,66 +800,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 5/252 [00:00<00:04, 49.95it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 252/252 [00:02<00:00, 84.91it/s]"
+      "100%|██████████| 462/462 [00:07<00:00, 63.86it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all ground truth len 96449\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "all ground truth len 177381\n",
+      "peak memory: 2714.06 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
    "source": [
     "######## GNN PRED FOR TEST_DATA_all2all ######### \n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "test_loader_gnn = LinkNeighborLoader(\n",
-    "    data=test_data_all2all,\n",
-    "    num_neighbors=[20, 10],\n",
-    "    edge_label_index=((\"user\", \"rates\", \"item\"), test_data_all2all[\"user\", \"rates\", \"item\"].edge_label_index),\n",
-    "    edge_label=test_data_all2all[\"user\", \"rates\", \"item\"].edge_label,\n",
-    "    batch_size=3 * 128,\n",
-    "    shuffle=False,\n",
-    ")\n",
-    "sampled_data_gnn = next(iter(test_loader_gnn))\n",
-    "preds_gnn = []\n",
-    "ground_truths_gnn = []\n",
-    "for sampled_data_gnn in tqdm(test_loader_gnn):\n",
-    "    with torch.no_grad():\n",
-    "        sampled_data_gnn.to(device)\n",
-    "        preds_gnn.append(model_gnn(sampled_data_gnn))\n",
-    "        ground_truths_gnn.append(sampled_data_gnn[\"user\", \"rates\", \"item\"].edge_label)\n",
-    "pred_gnn = torch.cat(preds_gnn, dim=0).cpu().numpy()\n",
-    "ground_truth_gnn = torch.cat(ground_truths_gnn, dim=0).cpu().numpy()\n",
     "\n",
-    "print('all ground truth len', len(ground_truth_gnn))"
+    "def pred_gnn(device, test_data):\n",
+    "    test_loader_gnn = LinkNeighborLoader(\n",
+    "        data=test_data_all2all,\n",
+    "        num_neighbors=[20, 10],\n",
+    "        edge_label_index=((\"user\", \"rates\", \"item\"), test_data_all2all[\"user\", \"rates\", \"item\"].edge_label_index),\n",
+    "        edge_label=test_data_all2all[\"user\", \"rates\", \"item\"].edge_label,\n",
+    "        batch_size=3 * 128,\n",
+    "        shuffle=False,\n",
+    "    )\n",
+    "    sampled_data_gnn = next(iter(test_loader_gnn))\n",
+    "    preds_gnn = []\n",
+    "    ground_truths_gnn = []\n",
+    "    for sampled_data_gnn in tqdm(test_loader_gnn):\n",
+    "        with torch.no_grad():\n",
+    "            sampled_data_gnn.to(device)\n",
+    "            preds_gnn.append(model_gnn(sampled_data_gnn))\n",
+    "            ground_truths_gnn.append(sampled_data_gnn[\"user\", \"rates\", \"item\"].edge_label)\n",
+    "    pred_gnn = torch.cat(preds_gnn, dim=0).cpu().numpy()\n",
+    "    ground_truth_gnn = torch.cat(ground_truths_gnn, dim=0).cpu().numpy()\n",
+    "    print('all ground truth len', len(ground_truth_gnn))\n",
+    "    return pred_gnn, ground_truth_gnn\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "# pred_gnn, ground_truth_gnn = %memit pred_gnn(device, test_data_all2all)\n",
+    "%memit pred_gnn(device, test_data_all2all)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,15 +894,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load_ext memory_profiler\n",
+    "%reload_ext memory_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7542/7542 [00:07<00:00, 1059.98it/s]\n",
-      "100%|██████████| 7542/7542 [00:06<00:00, 1080.27it/s]\n"
+      "100%|██████████| 10672/10672 [00:09<00:00, 1083.92it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 737.09 MiB, increment: 12.77 MiB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -924,59 +938,66 @@
     "ground_truth_pop = test_df_mf['rating'].to_numpy()\n",
     "\n",
     "##### MF_N #####\n",
-    "dataset = Dataset()\n",
-    "user_ids_mfn = np.union1d(train_df_mf['user'].unique(), test_df_mf['user'].unique())\n",
-    "item_ids_mfn = np.union1d(train_df_mf['item'].unique(), test_df_mf['item'].unique())\n",
-    "dataset.fit(user_ids_mfn, item_ids_mfn)\n",
-    "user_ids_mapping, _, item_ids_mapping, _ = dataset.mapping()\n",
-    "\n",
-    "(train_interactions_mfn, train_interactions_weight_mfn) = dataset.build_interactions((row['user'], row['item'], row['rating']) for index, row in train_df_mf.iterrows())\n",
-    "\n",
-    "model_mfn = LightFM(loss='warp')\n",
-    "model_mfn.fit(train_interactions_mfn, epochs=30, num_threads=2)\n",
-    "\n",
-    "test_df_mf['pred_mfn'] = float(0)\n",
-    "\n",
-    "for user, user_data in tqdm(test_df_mf.groupby('user'), total=test_df_mf['user'].nunique()):\n",
-    "    user_id_internal = user_ids_mapping[user]\n",
-    "    item_ids_internal = np.array([item_ids_mapping[item] for item in user_data['item']])\n",
-    "    predictions_mfn = model_mfn.predict(user_id_internal, item_ids_internal)\n",
-    "    test_df_mf.loc[user_data.index, 'pred_mfn'] = predictions_mfn\n",
-    "\n",
-    "pred_mfn = test_df_mf['pred_mfn'].to_numpy()\n",
-    "ground_truth_mfn = test_df_mf['rating'].to_numpy()\n",
-    "\n",
-    "##### MF_C #####\n",
-    "if dataset_mode == 'contract':\n",
+    "def mfn_pred(train_df_mf, test_df_mf):\n",
     "    dataset = Dataset()\n",
-    "    user_ids_mfc = np.union1d(train_df_mf['user'].unique(), test_df_mf['user'].unique())\n",
-    "    item_ids_mfc = np.union1d(train_df_mf['topic'].unique(), test_df_mf['topic'].unique())\n",
-    "    dataset.fit(user_ids_mfc, item_ids_mfc)\n",
+    "    user_ids_mfn = np.union1d(train_df_mf['user'].unique(), test_df_mf['user'].unique())\n",
+    "    item_ids_mfn = np.union1d(train_df_mf['item'].unique(), test_df_mf['item'].unique())\n",
+    "    dataset.fit(user_ids_mfn, item_ids_mfn)\n",
     "    user_ids_mapping, _, item_ids_mapping, _ = dataset.mapping()\n",
     "\n",
-    "    (train_interactions_mfc, train_interactions_weight_mfc) = dataset.build_interactions((row['user'], row['topic'], row['rating']) for index, row in train_df_mf.iterrows())\n",
+    "    (train_interactions_mfn, train_interactions_weight_mfn) = dataset.build_interactions((row['user'], row['item'], row['rating']) for index, row in train_df_mf.iterrows())\n",
     "\n",
-    "    model_mfc = LightFM(loss='warp')\n",
-    "    model_mfc.fit(train_interactions_mfc, epochs=30, num_threads=2, sample_weight=train_interactions_weight_mfc) # TODO maybe do not pass the weights to the MF models\n",
+    "    model_mfn = LightFM(loss='warp')\n",
+    "    model_mfn.fit(train_interactions_mfn, epochs=30, num_threads=2)\n",
     "\n",
-    "    def topic_popular_contracts(df):\n",
-    "        item_rating_sum = df.groupby(['topic', 'item'])['rating'].sum().reset_index()\n",
-    "        sorted_items = item_rating_sum.sort_values(['topic', 'rating'], ascending=[True, False])\n",
-    "        topic_to_popular_items = {k: g['item'].tolist() for k, g in sorted_items.groupby('topic')}\n",
-    "        return topic_to_popular_items\n",
-    "\n",
-    "    test_df_mf['pred_mfc'] = float(0)\n",
-    "    topic_popular_contracts_dict = topic_popular_contracts(test_df_mf)\n",
+    "    test_df_mf['pred_mfn'] = float(0)\n",
     "\n",
     "    for user, user_data in tqdm(test_df_mf.groupby('user'), total=test_df_mf['user'].nunique()):\n",
     "        user_id_internal = user_ids_mapping[user]\n",
-    "        item_ids_internal = np.array([item_ids_mapping[item] for item in user_data['topic']])\n",
-    "        predictions_mfc = model_mfc.predict(user_id_internal, item_ids_internal)\n",
-    "        test_df_mf.loc[user_data.index, 'pred_mfc'] = predictions_mfc\n",
+    "        item_ids_internal = np.array([item_ids_mapping[item] for item in user_data['item']])\n",
+    "        predictions_mfn = model_mfn.predict(user_id_internal, item_ids_internal)\n",
+    "        test_df_mf.loc[user_data.index, 'pred_mfn'] = predictions_mfn\n",
     "\n",
-    "    pred_mfc = test_df_mf['pred_mfc'].to_numpy()\n",
-    "    ground_truth_mfc = test_df_mf['rating'].to_numpy()\n",
-    "\n"
+    "    pred_mfn = test_df_mf['pred_mfn'].to_numpy()\n",
+    "    ground_truth_mfn = test_df_mf['rating'].to_numpy()\n",
+    "    return pred_mfn, ground_truth_mfn\n",
+    "\n",
+    "# %memit mfn_pred(train_df_mf, test_df_mf)\n",
+    "\n",
+    "##### MF_C #####\n",
+    "def mfc_pred(train_df_mf, test_df_mf):\n",
+    "    if dataset_mode == 'contract':\n",
+    "        dataset = Dataset()\n",
+    "        user_ids_mfc = np.union1d(train_df_mf['user'].unique(), test_df_mf['user'].unique())\n",
+    "        item_ids_mfc = np.union1d(train_df_mf['topic'].unique(), test_df_mf['topic'].unique())\n",
+    "        dataset.fit(user_ids_mfc, item_ids_mfc)\n",
+    "        user_ids_mapping, _, item_ids_mapping, _ = dataset.mapping()\n",
+    "\n",
+    "        (train_interactions_mfc, train_interactions_weight_mfc) = dataset.build_interactions((row['user'], row['topic'], row['rating']) for index, row in train_df_mf.iterrows())\n",
+    "\n",
+    "        model_mfc = LightFM(loss='warp')\n",
+    "        model_mfc.fit(train_interactions_mfc, epochs=30, num_threads=2, sample_weight=train_interactions_weight_mfc) # TODO maybe do not pass the weights to the MF models\n",
+    "\n",
+    "        def topic_popular_contracts(df):\n",
+    "            item_rating_sum = df.groupby(['topic', 'item'])['rating'].sum().reset_index()\n",
+    "            sorted_items = item_rating_sum.sort_values(['topic', 'rating'], ascending=[True, False])\n",
+    "            topic_to_popular_items = {k: g['item'].tolist() for k, g in sorted_items.groupby('topic')}\n",
+    "            return topic_to_popular_items\n",
+    "\n",
+    "        test_df_mf['pred_mfc'] = float(0)\n",
+    "        topic_popular_contracts_dict = topic_popular_contracts(test_df_mf)\n",
+    "\n",
+    "        for user, user_data in tqdm(test_df_mf.groupby('user'), total=test_df_mf['user'].nunique()):\n",
+    "            user_id_internal = user_ids_mapping[user]\n",
+    "            item_ids_internal = np.array([item_ids_mapping[item] for item in user_data['topic']])\n",
+    "            predictions_mfc = model_mfc.predict(user_id_internal, item_ids_internal)\n",
+    "            test_df_mf.loc[user_data.index, 'pred_mfc'] = predictions_mfc\n",
+    "\n",
+    "        pred_mfc = test_df_mf['pred_mfc'].to_numpy()\n",
+    "        ground_truth_mfc = test_df_mf['rating'].to_numpy()\n",
+    "        return pred_mfc, ground_truth_mfc\n",
+    "\n",
+    "%memit mfc_pred(train_df_mf, test_df_mf)"
    ]
   },
   {
