--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -547,126 +547,126 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:06<00:00, 28.69it/s]\n"
+      "100%|██████████| 188/188 [00:06<00:00, 31.01it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 001, Loss: 0.4314\n"
+      "Epoch: 001, Loss: 0.4321\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.83it/s]\n"
+      "100%|██████████| 188/188 [00:04<00:00, 39.28it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 002, Loss: 0.3281\n"
+      "Epoch: 002, Loss: 0.3306\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 36.01it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 36.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 003, Loss: 0.2965\n"
+      "Epoch: 003, Loss: 0.3013\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 36.00it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 36.59it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 004, Loss: 0.2715\n"
+      "Epoch: 004, Loss: 0.2786\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.79it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 36.57it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 005, Loss: 0.2597\n"
+      "Epoch: 005, Loss: 0.2604\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.74it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 36.62it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 006, Loss: 0.2404\n"
+      "Epoch: 006, Loss: 0.2433\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 36.00it/s]\n"
+      "100%|██████████| 188/188 [00:04<00:00, 39.21it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 007, Loss: 0.2294\n"
+      "Epoch: 007, Loss: 0.2278\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.93it/s]\n"
+      "100%|██████████| 188/188 [00:05<00:00, 37.36it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 008, Loss: 0.2182\n"
+      "Epoch: 008, Loss: 0.2214\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:05<00:00, 35.96it/s]"
+      "100%|██████████| 188/188 [00:05<00:00, 37.07it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 009, Loss: 0.2075\n"
+      "Epoch: 009, Loss: 0.2093\n"
      ]
     },
     {
@@ -716,21 +716,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 6/10672 [00:00<03:31, 50.46it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10672/10672 [03:25<00:00, 52.06it/s]\n"
+      "100%|██████████| 10665/10665 [03:24<00:00, 52.13it/s]\n"
      ]
     },
     {
@@ -738,9 +731,9 @@
      "output_type": "stream",
      "text": [
       "test edges shape BEFORE adding all possible user item pairs torch.Size([2, 60000])\n",
-      "test edges shape AFTER adding all possible user item pairs torch.Size([2, 177392])\n",
-      "unique test users 10672\n",
-      "unique test items 16325\n"
+      "test edges shape AFTER adding all possible user item pairs torch.Size([2, 177315])\n",
+      "unique test users 10665\n",
+      "unique test items 16307\n"
      ]
     }
    ],
@@ -800,40 +793,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data_all2all['user', 'rates', 'item'].edge_label_index[0].device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 462/462 [00:07<00:00, 63.86it/s]\n"
+      "100%|██████████| 462/462 [00:07<00:00, 65.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all ground truth len 177381\n",
-      "peak memory: 2714.06 MiB, increment: 0.00 MiB\n"
+      "all ground truth len 177315\n",
+      "required time for GNN inference on testset 7.120214223861694\n"
      ]
     }
    ],
    "source": [
     "######## GNN PRED FOR TEST_DATA_all2all ######### \n",
+    "import time\n",
     "\n",
-    "def pred_gnn(device, test_data):\n",
+    "def pred_gnn_gen(device, model_gnn, test_data):\n",
     "    test_loader_gnn = LinkNeighborLoader(\n",
     "        data=test_data_all2all,\n",
     "        num_neighbors=[20, 10],\n",
     "        edge_label_index=((\"user\", \"rates\", \"item\"), test_data_all2all[\"user\", \"rates\", \"item\"].edge_label_index),\n",
     "        edge_label=test_data_all2all[\"user\", \"rates\", \"item\"].edge_label,\n",
-    "        batch_size=3 * 128,\n",
+    "        batch_size= 3 * 128, #TO run the efficiency time use 17 as batch size, this will yield 10400 predictions that is near to MF number of preds (=10600)\n",
     "        shuffle=False,\n",
     "    )\n",
     "    sampled_data_gnn = next(iter(test_loader_gnn))\n",
     "    preds_gnn = []\n",
     "    ground_truths_gnn = []\n",
+    "    model_gnn = model_gnn.to(device)\n",
     "    for sampled_data_gnn in tqdm(test_loader_gnn):\n",
     "        with torch.no_grad():\n",
     "            sampled_data_gnn.to(device)\n",
@@ -845,13 +860,54 @@
     "    return pred_gnn, ground_truth_gnn\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "# pred_gnn, ground_truth_gnn = %memit pred_gnn(device, test_data_all2all)\n",
-    "%memit pred_gnn(device, test_data_all2all)"
+    "start_time = time.time()\n",
+    "pred_gnn, ground_truth_gnn = pred_gnn_gen(device, model_gnn, test_data_all2all)\n",
+    "end_time = time.time()\n",
+    "print('required time for GNN inference on testset', end_time - start_time)\n",
+    "# %memit pred_gnn_gen(device, test_data_all2all)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tue Oct 24 15:29:56 2023       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 470.182.03   Driver Version: 470.182.03   CUDA Version: 11.4     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  NVIDIA GeForce ...  Off  | 00000000:04:00.0 Off |                  N/A |\n",
+      "| 29%   29C    P2    56W / 250W |   1131MiB / 11018MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0   N/A  N/A     47933      G   /usr/lib/xorg/Xorg                 78MiB |\n",
+      "|    0   N/A  N/A     48206      G   /usr/bin/gnome-shell               10MiB |\n",
+      "|    0   N/A  N/A   1231349      C   ...research/.venv/bin/python     1037MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,31 +950,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %load_ext memory_profiler\n",
-    "%reload_ext memory_profiler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10672/10672 [00:09<00:00, 1083.92it/s]"
+      "100%|██████████| 10665/10665 [00:10<00:00, 1048.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 737.09 MiB, increment: 12.77 MiB\n"
+      "required time for MFN inference on testset with neg_edges_param = 10: 10.176647901535034\n"
      ]
     },
     {
@@ -938,7 +984,7 @@
     "ground_truth_pop = test_df_mf['rating'].to_numpy()\n",
     "\n",
     "##### MF_N #####\n",
-    "def mfn_pred(train_df_mf, test_df_mf):\n",
+    "def mfn_pred_gen(train_df_mf, test_df_mf):\n",
     "    dataset = Dataset()\n",
     "    user_ids_mfn = np.union1d(train_df_mf['user'].unique(), test_df_mf['user'].unique())\n",
     "    item_ids_mfn = np.union1d(train_df_mf['item'].unique(), test_df_mf['item'].unique())\n",
@@ -952,21 +998,24 @@
     "\n",
     "    test_df_mf['pred_mfn'] = float(0)\n",
     "\n",
+    "    start_time = time.time()\n",
     "    for user, user_data in tqdm(test_df_mf.groupby('user'), total=test_df_mf['user'].nunique()):\n",
     "        user_id_internal = user_ids_mapping[user]\n",
     "        item_ids_internal = np.array([item_ids_mapping[item] for item in user_data['item']])\n",
     "        predictions_mfn = model_mfn.predict(user_id_internal, item_ids_internal)\n",
     "        test_df_mf.loc[user_data.index, 'pred_mfn'] = predictions_mfn\n",
+    "    end_time = time.time()\n",
+    "    print('required time for MFN inference on testset with neg_edges_param = 10:', end_time - start_time)\n",
     "\n",
     "    pred_mfn = test_df_mf['pred_mfn'].to_numpy()\n",
     "    ground_truth_mfn = test_df_mf['rating'].to_numpy()\n",
     "    return pred_mfn, ground_truth_mfn\n",
     "\n",
-    "# %memit mfn_pred(train_df_mf, test_df_mf)\n",
+    "pred_mfn, ground_truth_mfn = mfn_pred_gen(train_df_mf, test_df_mf)\n",
     "\n",
     "##### MF_C #####\n",
-    "def mfc_pred(train_df_mf, test_df_mf):\n",
-    "    if dataset_mode == 'contract':\n",
+    "if dataset_mode == 'contract':\n",
+    "    def mfc_pred_gen(train_df_mf, test_df_mf):\n",
     "        dataset = Dataset()\n",
     "        user_ids_mfc = np.union1d(train_df_mf['user'].unique(), test_df_mf['user'].unique())\n",
     "        item_ids_mfc = np.union1d(train_df_mf['topic'].unique(), test_df_mf['topic'].unique())\n",
@@ -997,7 +1046,10 @@
     "        ground_truth_mfc = test_df_mf['rating'].to_numpy()\n",
     "        return pred_mfc, ground_truth_mfc\n",
     "\n",
-    "%memit mfc_pred(train_df_mf, test_df_mf)"
+    "# start_time = time.time()\n",
+    "# pred_mfc, ground_truth_mfc = mfc_pred_gen(train_df_mf, test_df_mf)\n",
+    "# end_time = time.time()\n",
+    "# print('required time for MFC inference on testset with neg_edges_param = 10:', end_time - start_time)"
    ]
   },
   {
